# weight-control-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: agent.example.md  architecture.md  deploy-docker.md  deploy-feishu-cli.md  deploy-feishu.md
scripts/: docker-entrypoint.sh
src/diet_tracker/: __init__.py  cli.py  config.py  db.py  feishu.py  feishu_bot.py  feishu_cli_bridge.py  feishu_fields.py  feishu_im.py  intent_router.py  llm_client.py  models.py  service.py  wechat_bot.py
tests/: test_db.py  test_feishu_cli_bridge.py  test_intent_router.py
