[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-diet-tracker"
version = "0.1.0"
description = "A local-first WeChat diet tracker for two people."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "lark-oapi>=1.6.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]
wechat = ["wxauto>=3.9.11"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
